The torus example works now!